try fix bottom modal layout break

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@
   --animate-fadeIn: fadeIn 0.3s ease-in-out forwards;
   --animate-fadeOutHidden: fadeOutHidden 0.15s ease-in-out forwards;
   --animate-delayZindex: delayZindex 0.5s ease-in-out forwards;
+  --animate-slideUp: slideUp 0.3s ease-in-out forwards;
+  --animate-slideDown: slideDown 0.3s ease-in-out forwards;
   @keyframes fadeIn {
     0% {
       opacity: 0;
@@ -46,6 +48,33 @@
     }
     100% {
       z-index: -10;
+    }
+  }
+
+  @keyframes slideUp {
+    0% {
+      display: block;
+      opacity: 0;
+      transform: translateY(100%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes slideDown {
+    0% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    99% {
+      display: block;
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(100%);
+      display: none;
     }
   }
 }
